# DAR

doc/: build_caffe_matlab.txt  new_caffe_layer_tutorial.txt  optical_flow_extraction_mpi.txt  protobuf_install.txt
projects/DAR/: actiondetector.py  build_img_list.py  demo_flownets.py  detect_actions_2.py  label_actions_2.py  train2.sh  videoprocessor.py
projects/DAR/ALSTM/: deploy.prototxt  solver.prototxt  train_val_fast.prototxt
projects/DAR/ALSTM_FlowNet/: deploy.prototxt  solver.prototxt  train.prototxt  train_val_fast-fc.prototxt  train_val_fast-orig.prototxt  train_val_fast.prototxt
projects/DAR/ALSTM_VGG16-1-1/: deploy.prototxt  solver.prototxt  train_val_fast.prototxt
projects/DAR/FCN8/: deploy.prototxt  eval.py  solve.py  solver.prototxt
projects/DAR/FlowNet/: deploy.prototxt  deploy.tpl.prototxt  solver.prototxt
projects/DAR/lstm_net-3/: deploy-18.prototxt  solver.prototxt  train_val_fast-lstm-18.prototxt  train_val_fast-lstm-6.prototxt
projects/DAR/spatial_lstm_net-full/: deploy-10.prototxt  deploy-18.prototxt  deploy-25.prototxt  solver.prototxt  train_val_fast-lstm-10.prototxt  train_val_fast-lstm-18.prototxt  train_val_fast-lstm-25.prototxt
projects/DAR/temporal_lstm_net-2/: deploy-25.prototxt  solver.prototxt  train_val_fast-lstm-10.prototxt  train_val_fast-lstm-18.prototxt  train_val_fast-lstm-25.prototxt
projects/DAR/temporal_lstm_net-full/: build_flow_net.py  deploy-10.prototxt  deploy-18-old.prototxt  deploy-18.prototxt  deploy-flow-stream.prototxt  test_net.py  train_val_fast-lstm-18-old.prototxt  train_val_fast-lstm-25-old.prototxt  train_val_fast.prototxt
projects/UCF101-2stream/: classit.py  detect_actions.py  fuse_space_time.py  label_actions.py  label_actions.txt  prepare_data.py  train_action_recognition_flow-nvidia-final.sh  train_action_recognition_flow-nvidia.sh  train_action_recognition_flow-resume-nvidia.sh  train_action_recognition_flow-resume.sh  train_action_recognition_flow.sh  train_action_recognition_rgb-nvidia.sh  train_action_recognition_rgb-resume-nvidia.sh  train_action_recognition_rgb.sh  train_caffenet.sh  video_list_from_annotations.py
projects/UCF101-2stream/log/: caffe.workhorse.jiri.log.INFO.20150807-204047.6165  caffe.workhorse.jiri.log.INFO.20150808-004911.23784  caffe.workhorse.jiri.log.INFO.20150808-030623.2843  caffe.workhorse.jiri.log.INFO.20150808-083245.2554  caffe.workhorse.jiri.log.INFO.20150808-095838.9961  caffe.workhorse.jiri.log.INFO.20150808-131017.10655  caffe.workhorse.jiri.log.INFO.20150808-203437.4679  caffe.workhorse.jiri.log.INFO.20150809-124747.2646  caffe.workhorse.jiri.log.INFO.20150809-173249.28977  caffe.workhorse.jiri.log.INFO.20150809-180940.30033  caffe.workhorse.jiri.log.INFO.20150809-195838.30731-flow-0-23k  caffe.workhorse.jiri.log.INFO.20150811-103243.32565  caffe.workhorse.jiri.log.INFO.20150811-114059.3658-flow-23k-24k  caffe.workhorse.jiri.log.INFO.20150811-153637.5951-flow-24k-26k  caffe.workhorse.jiri.log.INFO.20150811-193408.6457  caffe.workhorse.jiri.log.INFO.20150811-233247.9014-rgb-0-10k
projects/fcn_segmentation/: build_db.py  build_image_list.py  fileSystemUtils.py  pascal_context_to_lmdb.py
projects/optical_flow_regression/: do_of.py  dof.py  epe.py  gui.py  img-mean.py  lmdb-get.py  lmdb-normalize.py  make-imglist.py  make_image_list.py  make_ofr_lmdb.py  makedb.py  nnsize.m  pipe-test.py  readme.txt  show_net.py  th_test.py  train-1-of.txt  train-of-mpi-large.txt  train-of-mpi.txt  train.sh  train2-bkg.sh  train2.sh  train_of_src_clean_final_90_10.txt  transplantation.py  utils.py  val-of-mpi-large.txt  val-of-mpi.txt  val_of_src_clean_final_90_10.txt
projects/optical_flow_regression/FCN32/: deploy-orig.prototxt  deploy.prototxt  solve.py  solver.prototxt  train_val.prototxt
projects/optical_flow_regression/FCN8/: eval.py  train_val.prototxt
projects/optical_flow_regression/OFR_VGG16_6_fc/: deploy.prototxt  solver.prototxt  train_val_fast.prototxt
projects/optical_flow_regression/OFR_VGG16_6_fc14/: deploy.prototxt  solver.prototxt  train_val_fast.prototxt
projects/optical_flow_regression/OFR_VGG16_6_fc_d/: deploy.prototxt  solver.prototxt  train_val_fast.prototxt
projects/optical_flow_regression/OFR_VGG16_6_fc_dl/: deploy.prototxt  solver.prototxt  train_val_fast.prototxt
projects/optical_flow_regression/OFR_VGG16_6_fc_ds/: deploy.prototxt  solver.prototxt  train_val_fast.prototxt
projects/optical_flow_regression/OFR_VGG16_6_fc_x8/: deploy.prototxt  solver.prototxt  train_val_fast.prototxt
projects/optical_flow_regression/OFR_VGG16_6_hist-1/: deploy.prototxt  solver.prototxt  train_val_fast.prototxt
sbin/: build_caffe-wdts.sh  build_caffe.sh  build_mpi.sh  build_opencv.sh  dir2latex.sh  dump_net.sh  extract_lmdb_img.py  ipupdate.py  remove_cmake_install.sh  rm_all_not_manifest.sh  run_flowMaker_mpi.sh  setup.sh  show_net.py  show_progress.py  train2.sh  update_deps.sh  update_upstream_caffe.sh  viper.sh
src/ClassitC/: CMakeLists.txt  classification.cpp
src/flowMaker/: CMakeLists.txt  colorcode.cpp  colorcode.h  extractFlow.cpp  extractFlow.h  imageProcessor.cpp  imageProcessor.h
src/lmdbio/: lmdbio.pro  mainwindow.ui
src/npyLoader/: main.cpp  npyLoader.pro
src/ofEval/: CMakeLists.txt  colorcode.cpp  colorcode.h  flowIO.cpp  flowIO.h  main.cpp  ofEval.cpp  ofEval.h
src/ofEval/utils/: conversion.cpp
(+60 files in other folders)
